mostly completed ArmorStatsCategory deduplicated part inputs
Took 2 hours 58 minutes